[gd_scene load_steps=6 format=2]

[ext_resource path="res://L0 Basic Guide/entry.tscn" type="PackedScene" id=1]
[ext_resource path="res://L13 Physic Area/Area2D2.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="ConcavePolygonShape2D" id=1]
segments = PoolVector2Array( 333, 260, 666, 260, 666, 220, 333, 220 )

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[node name="BasicRoot" instance=ExtResource( 1 )]

[node name="bg" parent="." index="0"]
__meta__ = {
"_edit_lock_": true
}

[node name="MyTitle" parent="bg" index="0"]
text = "Phyasic Area2D/3D"

[node name="circle" parent="bg" index="1"]
visible = false

[node name="note" parent="bg" index="2"]
text = "There are three main uses for Area2D/3D:

- Overriding physics parameters (such as gravity) in a given region.
- Detecting when other bodies enter or exit a region or what bodies are currently in a region.
- Checking other areas for overlap."

[node name="Area2D" type="Area2D" parent="." index="1"]
space_override = 1
gravity = -198.0
linear_damp = 0.0
__meta__ = {
"_editor_description_": "Area 本身只提供碰撞检测逻辑，需要在子级节点中给出一个碰撞检测边界范围定义，有两种方式：

- CollisionPolygon 此直接在编辑器绘画多边形，提供图形用于确定碰撞检测的边界范围。
- CollisionShape 碰撞图形方式提供则可以通过网格来生成。
"
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D" index="0"]
position = Vector2( -34, -2 )
polygon = PoolVector2Array( 293, 278, 797, 282, 535, 407 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="1"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Area2D" index="2"]
margin_left = 454.0
margin_top = 317.0
margin_right = 563.0
margin_bottom = 331.0
text = "Anti-Gravity Area"

[node name="Area2D2" type="Area2D" parent="." index="2"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Area 本身只提供碰撞检测逻辑，需要在子级节点中给出一个碰撞检测边界范围定义，有两种方式：

- CollisionPolygon 此直接在编辑器绘画多边形，提供图形用于确定碰撞检测的边界范围。
- CollisionShape 碰撞图形方式提供则可以通过网格来生成。
"
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2" index="0"]
self_modulate = Color( 0.0431373, 0, 0, 1 )
position = Vector2( -584, -315 )
polygon = PoolVector2Array( 488, 315, 535, 290, 583, 314.875, 535, 340 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Area2D2/CollisionPolygon2D" index="0"]
margin_left = 531.0
margin_top = 305.0
margin_right = 539.0
margin_bottom = 319.0
text = "0"

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D2" index="1"]
self_modulate = Color( 0.121569, 0, 0.580392, 1 )
position = Vector2( -487, -315 )
polygon = PoolVector2Array( 488, 315, 535, 290, 583, 314.875, 535, 340 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Area2D2/CollisionPolygon2D2" index="0"]
margin_left = 531.0
margin_top = 305.0
margin_right = 539.0
margin_bottom = 319.0
text = "1"

[node name="CheckButton" type="CheckButton" parent="." index="3"]
margin_left = 407.0
margin_top = 432.0
margin_right = 606.0
margin_bottom = 472.0
text = "No Shape Signals"

[node name="Rigids" type="Node2D" parent="." index="4"]

[node name="RigidBody2D" type="RigidBody2D" parent="Rigids" index="0"]
position = Vector2( 498, 111 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigids/RigidBody2D" index="0"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Rigids/RigidBody2D" index="1"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="RigidBody2D2" type="RigidBody2D" parent="Rigids" index="1"]
position = Vector2( 357, 154 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigids/RigidBody2D2" index="0"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Rigids/RigidBody2D2" index="1"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="RigidBody2D3" type="RigidBody2D" parent="Rigids" index="2"]
position = Vector2( 621, 173 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigids/RigidBody2D3" index="0"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Rigids/RigidBody2D3" index="1"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="Area2D2" to="Area2D2" method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="Area2D2" method="_on_Area2D2_area_exited"]
[connection signal="area_shape_entered" from="Area2D2" to="Area2D2" method="_on_Area2D2_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D2" to="Area2D2" method="_on_Area2D2_area_shape_exited"]
[connection signal="toggled" from="CheckButton" to="Area2D2" method="_on_CheckButton_toggled"]
